# vim-reviewer

./: .gitignore  .nvimrc  Cargo.toml  README.md  build  cli-review.py
offline_pr_review/: setup.cfg  setup.py
offline_pr_review/offline_pr_review/: __init__.py  offline_pr_review.py
rplugin/python3/: nvim-plugin.py  vim-reviewer.py
src/: lib.rs
