[package]
name = "vim-reviewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.85"
serde = "1.0.145"
git2 = "0.15.0"
tempfile = "3.3.0"

[dependencies.nvim-oxi]
# version = "0.2.2"
git = "https://github.com/noib3/nvim-oxi"
features = ["neovim-0-8", "test"]


[dependencies.reqwest]
version = "0.11.12"
features = ["blocking", "json"]

[lib]
crate-type = ["cdylib"]
