[package]
name = "vim-reviewer"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.85"
serde = { version = "1.0.145", features = ["derive"] }
git2 = "0.15.0"
tempfile = "3.3.0"
regex = "1.11.2"
toml = "0.8"

[dependencies.nvim-oxi]
version = "0.6.0"
# git = "https://github.com/noib3/nvim-oxi"
features = ["neovim-0-11", "test"]


[dependencies.reqwest]
version = "0.11.12"
features = ["blocking", "json"]

[lib]
crate-type = ["cdylib"]
